# secure-llm-client

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: Gemfile  README.md  _config.yml  index.md
docs/advanced/: index.md
docs/architecture/: evaluation-pipeline.md  index.md  layers.md  providers.md  testing.md
docs/contributing/: index.md
docs/examples/: index.md
docs/getting-started/: index.md  installation.md  prerequisites.md  quick-start.md
docs/guardrails/: custom-policies.md  gpt-oss-safeguard.md  hybrid.md  index.md  input-patterns.md  llama-guard.md  llama-prompt-guard.md  regex.md
docs/user-guide/: cli-usage.md  configuration.md  index.md  library-api.md  pdf-extraction.md  response-formats.md  token-management.md
src/: client.rs  config.rs  config_builder.rs  lib.rs  main.rs  pdf.rs  provider.rs  schema_validator.rs  token_estimator.rs
src/cli/: guardrail_config.rs  output_writer.rs  prompt_loader.rs  validators.rs
src/guardrails/: config.rs  gpt_oss_safeguard.rs  hybrid.rs  input.rs  llama_guard.rs  mod.rs  output.rs  (+4 more)
tests/: api_response_edge_cases.rs  cli_integration_test.rs  config_completeness_test.rs  config_file_path_loading_test.rs  config_override_tests.rs  end_to_end_config_file_test.rs  error_handling_test.rs  figment_merge_test.rs  guardrail_trait_tests.rs  guardrails_config_integration_test.rs  guardrails_llama_prompt_guard_test.rs  metadata_completeness_test.rs  output_guardrail_provider_tests.rs  pdf_tests.rs  provider_tests.rs  response_format_integration_test.rs  response_format_tests.rs  unit_tests.rs
(+3 files in other folders)
