[package]
name = "fortified-llm-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LLM client library fortified by multi-layered security guardrails, PDF extraction, and multi-provider support"
repository = "https://github.com/mrizzi/fortified-llm-client"
readme = "README.md"
keywords = ["llm", "ai", "security", "guardrails", "openai"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "fortified_llm_client"
path = "src/lib.rs"

[[bin]]
name = "fortified-llm-client"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
figment = { version = "0.10", features = ["toml", "json", "env"] }
futures = "0.3"
jsonschema = "0.40"
log = "0.4"
once_cell = "1.21"
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
futures = "0.3"
mockito = "1.7"
predicates = "3.1"
tempfile = "3.24"
